<resources>
    <string name="app_name">Lellarap</string>
    <string name="ingreso_face">Ingresar con facebook</string>
    <string name="ingreso_google">Ingresar con google</string>
    <string name="registro_face">Registro con facebook</string>
    <string name="registro_google">Registro con google</string>
    <string name="txt_bienvenido">Bienvenido</string>}
    <string name="txt_title_hora">Elije un buen bomento en el dia para ti</string>
    <string name="txt_title_dia">Al azar en el dia</string>
    <string name="txt_title_noche">Al azar en la noche</string>
    <string name="txt_title_azar_dia">Establecer una hora especifica</string>
    <string name="txt_title_pausas_act">Pausas Activas</string>
    <string name="txt_title_crear_evento">Crear Evento</string>
    <string name="txt_nombre_del_evento">Nombre del evento</string>
    <string name="txt_seleccion">Selecciona los dias que quieres realizar este evento</string>
    <string name="txt_descricion_pensamientos">Escribe lo que piensas</string>
    <string name="txt_title_ejemplo">Selecciona la cantidad de ejercicios que quieres realizar hoy</string>
    <string name="txt_title_Pensamientos">Pensamientos</string>
    <string name="txt_buscar">Buscar</string>
    <string name="txt_como_te_sientes">¿Como está tu estado de animo hoy?, elige entre triste 1 o muy alegre 5</string>
    <string name="txt_como_has_dormido">Como has dormido estos dias del 1 al 5</string>
    <string name="txt__nivel_actividad_fisica">¿como calificarías el nivel de satisfaccion de las actividades realizadas ultimamente?</string>
    <string name="txt_inicio">Ir al inicio</string>
    <string name="txt_estadoAnimo">Estado De Animo</string>
    <string name="txt_salud">Pasatiempos</string>

    <string name="prefs_file">com.edu.uan.android.leyarap.PREFERENCE_FILE_KEY</string>
    <string name="title_activity_encuesta">EncuestaActivity</string>
    <string name="buscar">Buscar</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_item_pensamientos">delete_item_pensamientos</string>
    <string name="edit_item_pensamientos">edit_item_pensamientos</string>
    <string name="txt_broma">Bromas</string>
    <string name="txt_consejo">Consejos</string>
    <string name="txt_concentracion">Concentracion</string>

    <!-- chistes-->
    <string name="txt_chiste1">Ya tenemos su diagnóstico. Usted tiene la enfermedad de Kengsinton, ¿Es grave doctor?, No lo sabemos señor Kengsinton</string>
    <string name="txt_chiste2">¡Soldado López!. ¡Sí mi capitán!. No lo vi ayer en la prueba de camuflaje.¡Gracias mi capitán!</string>
    <string name="txt_chiste3">¿Cómo se llama el campeón de buceo japonés?. Tokofondo. ¿Y el subcampeón?. Kasitoko.</string>
    <string name="txt_chiste4">.¿Cuanto cuesta esta estufa?, 5000 dolares, Pero, oiga, esto es una estafa, No señor, es una estufa.</string>
    <string name="txt_chiste5">¿Cómo se dice escoba voladora en japonés?, Simekaigo Memato.</string>

    <!-- consejos-->
    <string name="txt_consejo1">Reconozca las cosas que no puede cambiar: Aceptar que no puede cambiar ciertas cosas le permite dejarlas ir y no alterarse. Por ejemplo, no puede cambiar el hecho de que debe conducir durante la hora pico. Pero puede buscar maneras de relajarse en el trayecto, como escuchar un podcast o un audiolibro.</string>
    <string name="txt_consejo2">Evite las situaciones estresantes: Siempre que le sea posible, aléjese de la fuente del estrés. Por ejemplo, si su familia discute en los días festivos, dese un descanso y salga a caminar o a dar una vuelta en el auto.</string>
    <string name="txt_consejo3">Cambie su perspectiva: Intente desarrollar una actitud más positiva ante los desafíos. Puede hacerlo reemplazando los pensamientos negativos con pensamientos más positivos. Por ejemplo, en lugar de pensar, "¿por qué siempre todo sale mal?", cambie esa idea por, "puedo encontrar una manera de superar esto". Puede parecer difícil o tonto en un principio, pero podría descubrir que esto le ayuda a dar un giro a su perspectiva.</string>
    <string name="txt_consejo4">Aprenda a decir que no: Si su estrés viene de realizar demasiadas tareas en casa o en el trabajo, aprenda a establecer límites. Pida ayuda a los demás cuando la necesite.</string>
    <string name="txt_consejo5">Duerma lo suficiente: Descansar suficientemente durante la noche puede ayudarle a pensar con más claridad y a tener más energía. Esto hará que sea más fácil manejar cualquier problema que pueda surgir. Intente dormir entre 7 y 9 horas todas las noches.</string>

    <!--Consentracion-->
    <string name="txt_concentracion1">realizar un dibujo en los proximos 60 segundos</string>
    <string name="txt_concentracion2">Escribe una historia en los proximos 60 segundos</string>
    <string name="txt_concentracion3">llama aldecimo contacto de tu telefono en los proximos 60 segundos</string>
    <string name="txt_concentracion4">Practicar respiraciones de relajación en los proximos 60 segundos</string>
    <string name="txt_concentracion5">Haz una actividad física de tu preferencia en los proximos 60 segundos</string>
    <string name="txt_concentracion6">Examina tu dia, piensa como te ha ido o como te fue antes que acabe el tiempo</string>




</resources>