<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:paddingEnd="10dp"
    tools:context=".salud.ActivityCreadaSalud">

    <TextView
        android:id="@+id/txt_title_salud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="28dp"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/chistesactivity"
        android:layout_width="138dp"
        android:layout_height="132dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="Broma"
        android:scaleType="fitCenter"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_consejos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title_salud"
        app:layout_constraintVertical_bias="0.204"
        app:srcCompat="@drawable/broma" />

    <TextView
        android:id="@+id/txt_bromas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txt_broma"
        android:textAlignment="center"
        android:textColor="#FFFEFE"
        android:textSize="23sp"
        android:background="#000000"
        android:backgroundTint="#63000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.246"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chistesactivity" />

    <ImageButton
        android:id="@+id/btn_consejos"
        android:layout_width="141dp"
        android:layout_height="133dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="consejo"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29"
        app:srcCompat="@drawable/consejo" />

    <TextView
        android:id="@+id/txt_consejos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_consejo"
        android:textColor="#FFFFFF"
        android:textSize="23sp"
        android:background="#000000"
        android:backgroundTint="#63000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.854"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_consejos"
        app:layout_constraintVertical_bias="0.039" />

    <ImageButton
        android:id="@+id/btn_concentracion"
        android:layout_width="136dp"
        android:layout_height="127dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="concentracion"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_bromas"
        app:layout_constraintVertical_bias="0.136"
        app:srcCompat="@drawable/concentracion" />

    <TextView
        android:id="@+id/txt_concentracion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_concentracion"
        android:textColor="#FFFFFF"
        android:textSize="23sp"
        android:background="#000000"
        android:backgroundTint="#63000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_concentracion"
        app:layout_constraintVertical_bias="0.078" />

</androidx.constraintlayout.widget.ConstraintLayout>