<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/autenticacionlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondove4"
    tools:context=".LoginActicity">

    <TextView
        android:id="@+id/textarriba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:text="@string/txt_bienvenido"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/editCorreo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.429" />

    <EditText
        android:id="@+id/editCorreo"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/edit_redondo"
        android:drawableLeft="@drawable/user"
        android:hint=" Correo"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:textColor="#fff"
        app:layout_constraintBottom_toTopOf="@+id/editPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginBottom="56dp"
        android:background="@drawable/edit_redondo"
        android:drawableLeft="@drawable/pass1"
        android:hint=" Contraseña"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_registrarme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.99" />

    <ImageButton
        android:id="@+id/btn_registrarme"
        android:layout_width="375dp"
        android:layout_height="110dp"
        android:layout_weight="1"
        android:backgroundTint="#00FFFFFF"
        android:scaleType="centerInside"
        android:scaleX="1.08"
        android:scaleY="1.25"
        app:layout_constraintBottom_toTopOf="@+id/btn_ingresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/registrarmebtnve4" />

    <ImageButton
        android:id="@+id/btn_ingresar"
        android:layout_width="368dp"
        android:layout_height="99dp"
        android:layout_weight="1"
        android:backgroundTint="#00FFFFFF"
        android:scaleType="centerInside"
        android:scaleX="1.08"
        android:scaleY="1.25"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.939"
        app:srcCompat="@drawable/ingresarve4" />

    <Button
        android:id="@+id/btn_facebook"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/btn_face"
        android:drawableLeft="@drawable/facebook_logo"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/ingreso_face"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_google"
        android:layout_width="168dp"
        android:layout_height="19dp"
        android:background="@drawable/btn_google"
        android:drawableLeft="@drawable/google_logo"
        android:paddingLeft="10dp"
        android:text="@string/ingreso_google"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.925"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.964" />

</androidx.constraintlayout.widget.ConstraintLayout>